glFusion ChangeLog

v1.1.2
------
- Updated version numbers (Mark)
        private/system/sql/mysql_tableanddata.php

- New option to email user when admin creates account (Mark)
        private/system/lib/lib-user.php
        public_html/admin/user.php
        public_html/layout/nouveau/admin/users/edituser.thtml

- Enhanced password generation, do not include commonly mistaken characters
  like 0 and O, 1 and l - Patch by Jeff Hare (Mark)
        private/system/lib/lib-user.php

- Change mailer text to glFusion CMS (Mark)
        private/lib/phpmailer/class.phpmailer.php

- Removed extra : (colon) from template (already in language file) (Mark)
        public_html/layout/nouveau/profiles/contactuserform_advanced.thtml

- Media Gallery - removed references to non-existent usage.html in
  Media Gallery (Mark)
       private/plugins/mediagallery/templates/administration.thtml

- Fixed error in emailglfusionstories that would include banned and non-active
  users - Patch by cchiapusio (Mark)
        public_html/lib-common.php

- SiteTailor - Implemented the hmenu and vmenu auto tags (Mark)
        private/plugins/sitetailor/functions.inc

- Upgraded FCKeditor to latest version
        private/system/lib-comment.php
        public_html/profiles.php
        public_html/submit.php

        public_html/javascript/advanced_editor.js
        public_html/javascript/storyeditor_fckeditor.js
        public_html/javascript/staticpages_fckeditor.js
        public_html/javascript/submitcomment_fckeditor.js
        public_html/javascript/submitcontactuser_fckeditor.js
        public_html/javascript/submitmailuser_fckeditor.js
        public_html/javascript/submitstory_fckeditor.js

        public_html/fckeditor/fckconfig.js
        public_html/fckeditor/myconfig.js

        public_html/fckeditor/_documentation.html
        public_html/fckeditor/_upgrade.html
        public_html/fckeditor/_whatsnew.html
        public_html/fckeditor/_whatsnew_history.html